objects/Project_Milestone__c.object
<CustomObject>
    <description>Contains Comments, Start, End Dates and relevant information for a Milestone associated with a SubProject.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Site__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date_Final__c</fullName>
        <formula>IF(!ISBLANK(Actual_End_Date__c) &amp;&amp; (Total_Activities__c - Total_Activities_Closed__c == 0), Actual_End_Date__c, null)</formula>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Current Max Project Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <formula>Site__r.Dealer_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_PSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on PSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Buffer__c</fullName>
        <formula>IF (!ISBLANK(Planned_End_Date__c),MAX(Planned_End_Date__c - TODAY(),0),0) - (IF (!ISBLANK(Expected_Remaining_Duration__c), Expected_Remaining_Duration__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Remaining_Duration__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expected Remaining Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <description>Field used to store IDs of external objects like LAO, NIS Mission etc as applicable for the Milestone</description>
        <label>External System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Id2__c</fullName>
        <formula>IF(External_System_New_Id__r.Record_Type_Name__c = &apos;LAO&apos;, CASESAFEID(External_System_New_Id__r.LAO_ID__c), External_System_New_Id__r.Mission_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External System Id2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Name__c</fullName>
        <formula>External_System_New_Id__r.External_Entity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External System Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_New_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subproject External Reference Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SubProject__c</field>
                <operation>equals</operation>
                <valueField>SubProject_External_Reference__c.SubProject__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubProject_External_Reference__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_a_Product_Milestone__c</fullName>
        <formula>IF( Milestone_Definition__r.Count_of_Products__c &gt; 0, True, False)</formula>
        <label>Is a Product Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestone_Definition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Milestone Definition</label>
        <referenceTo>Milestone_Definition__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_End_Dt_Delayed_Count__c</fullName>
        <label>Planned End Dt Delayed Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Dt_Delayed_Count__c</fullName>
        <label>Planned Start Dt Delayed Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Step__c</fullName>
        <description>Represents the step in the current 6 step process. The introduction of this attribute on the Milestone Definition object supports project milestone sorting, representing the primary sorting field in the View and Edit Milestone pages.</description>
        <label>Process Step</label>
        <picklist>
            <picklistValues>
                <fullName>01-Implementation Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02-Project Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-Site Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-CDK GoLive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-Transition Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-Ongoing Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>SubProject__r.Name</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Gauge_Color__c</fullName>
        <formula>IF( Status__c = &apos;At Risk&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAS&quot;, &apos;At Risk&apos;), 
IF(Status__c = &apos;Caution&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAT&quot;, &apos;Caution&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAR&quot;, &apos;On Target&apos;)))</formula>
        <inlineHelpText>Red - At Risk 
Yellow - Caution 
Green - On Target</inlineHelpText>
        <label>Risk Gauge Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>Site__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SubProject__c</field>
                <operation>equals</operation>
                <valueField>SubProjectSite__c.SubProject__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubProjectSite__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Sequence__c</fullName>
        <label>Sort Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( !ISBLANK(Actual_End_Date_Final__c) ,&apos;Complete&apos;, 
IF( ISBLANK(Planned_End_Date__c) ,&apos;On Target&apos;, 
IF( Duration_Buffer__c &lt;= 0,&apos;At Risk&apos;, 
IF( (Duration_Buffer__c &gt; 0) &amp;&amp; ((Duration_Buffer__c + MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0))/MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0) &lt;= 1.25),&apos;Caution&apos;, 
IF((Duration_Buffer__c &gt; 0) &amp;&amp; ((Duration_Buffer__c + MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0))/MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0) &gt; 1.25),&apos;On Target&apos;, 
null 
)))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Activities_Closed__c</fullName>
        <label>Total Activities Closed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <label>Total Activities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Time_Spent__c</fullName>
        <label>Total Actual Days Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expected_Time_Spent__c</fullName>
        <label>Total Expected Time Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SH_All</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>SubProject__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Description__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>SH All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SH_All_for_William</fullName>
        <columns>NAME</columns>
        <columns>Project_ID__c</columns>
        <columns>SubProject__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Description__c</columns>
        <columns>Actual_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>mike hale,donald revels,sharon taylor</value>
        </filters>
        <label>SH All for William</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MID-{000000000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IMP_NoCloseMilestoneIfOpenActivities</fullName>
        <active>true</active>
        <description>Prevent the closure of Milestone if there are open activities.</description>
        <errorConditionFormula>ISCHANGED( Status__c ) &amp;&amp; 
CASE(Status__c, &quot;Complete&quot;, &quot;Complete&quot;, &quot;Uncomplete&quot;) == &quot;Complete&quot; &amp;&amp;
BLANKVALUE(Total_Activities__c, 0) &gt; 0 &amp;&amp;
BLANKVALUE(Total_Activities__c, 0) &lt;&gt;  BLANKVALUE( Total_Activities_Closed__c , 0) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>You are unable to close a Milestone if it has activities that are open</errorMessage>
    </validationRules>
</CustomObject>